Spacing issue

--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -235,7 +235,7 @@ section{
       }
       p{
         font-size: 18px;
-        line-height: 22px;
+        line-height: 32px;
         width: 621px;
         margin-top: 30px;
         @media(max-width: $sm){
@@ -308,9 +308,10 @@ section{
             width: 100%;
             font-size: 15px;
             margin-top: 15px;
+            line-height: 22px;
             @media(max-width: $sm){
               font-size: 20px;
-              line-height: 22px;
+              line-height: 32px;
             }
           }
         }
